added better titles to main and title

--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <title>Frame1 title</title>
 </head>
 <body>
-    <p>Frame1 paragraph 1</p>
+    <p>Main more paragraph 1</p>
     
 </body>
 </html>
