--- a/title.html
+++ b/title.html
@@ -8,7 +8,7 @@
 </head>
 <body bgcolor="green">
     <font size ="40">
-    <p>Frame1 paragraph 1</p>
+    <p>Title paragraph 1</p>
     
 </body>
 </html>
